--- a/main.scss
+++ b/main.scss
@@ -179,7 +179,6 @@ body {
 		font-size: 1rem;
 		font-weight: 600;
 		justify-content: center;
-		// padding: 1rem;
 		text-transform: uppercase;
 		color: #239ad2;
 		margin: .5rem 0;
@@ -232,7 +231,10 @@ body {
     margin: 0 auto;
 
     @include respond(tab-land) {
-        width: 90%;    }
+		width: 90%;    }
+		
+		@include respond(big-desktop) {
+			width: 90%;    }
 }
 
 p {
