--- a/css/main.css
+++ b/css/main.css
@@ -189,23 +189,23 @@ body {
 .container {
   width: 35%;
   margin: 0 auto; }
-  @media (max-width: 75em) {
-    .container {
-      width: 90%; } }
   @media (max-width: 112.5em) {
     .container {
-      width: 90%; } }
+      width: 70%; } }
+  @media (max-width: 75em) {
+    .container {
+      width: 80%; } }
 
 p {
   font-family: Lora, serif;
   font-weight: 100;
-  font-size: 1.6rem;
+  font-size: 1.7rem;
   line-height: 2.1rem;
   margin-top: 2.8rem;
   margin-bottom: 2.8rem; }
   @media (max-width: 75em) {
     p {
-      font-size: 2rem;
+      font-size: 1.8rem;
       line-height: 2.7rem; } }
   @media (max-width: 51em) {
     p {
@@ -213,7 +213,7 @@ p {
       line-height: 3.2rem; } }
   @media (max-width: 37.5em) {
     p {
-      font-size: 1.7rem;
+      font-size: 1.5rem;
       line-height: 2.3rem; } }
 
 .img-responsive {
@@ -226,3 +226,66 @@ p {
   color: #A3A5A9; }
   .img-desc--author {
     margin-left: 1.5rem; }
+
+.footer {
+  font-family: Limerick, sans-serif;
+  font-size: 1rem;
+  background-color: #FAF7FA;
+  margin-bottom: 10rem;
+  height: 45rem;
+  border-top: 1px solid #d7d7d9;
+  border-bottom: 1px solid #d7d7d9; }
+  .footer h2 {
+    font-size: 1.8rem;
+    font-weight: 500; }
+  .footer-logo {
+    padding: 4rem 0; }
+  .footer-logo-img {
+    display: block;
+    margin: 0 auto;
+    height: 5rem; }
+  .footer-inner-container {
+    display: flex;
+    justify-content: center; }
+  .footer-inner-container-left {
+    text-align: center;
+    padding-right: 5rem; }
+  .footer-inner-container--ad {
+    height: 20rem;
+    margin-top: 2rem; }
+  .footer-inner-container-middle {
+    text-align: center;
+    width: 25%;
+    border-right: 1px solid #d7d7d9;
+    border-left: 1px solid #d7d7d9; }
+    .footer-inner-container-middle--links {
+      font-weight: 500;
+      margin-top: 1rem;
+      list-style: none;
+      display: inline-block; }
+      .footer-inner-container-middle--links li {
+        padding: 1rem 0; }
+  .footer-inner-container-right {
+    width: 20%;
+    text-align: center; }
+    .footer-inner-container-right--links {
+      list-style: none; }
+      .footer-inner-container-right--links li {
+        font-size: 1.1rem;
+        padding: 1.5rem 0 0 0; }
+    .footer-inner-container-right--media {
+      width: 75%;
+      margin-bottom: 4rem; }
+    .footer-inner-container-right button {
+      display: block;
+      margin: 1rem auto;
+      text-transform: uppercase;
+      padding: 1.2rem 4.2rem;
+      font-size: 1.2rem;
+      font-weight: 900;
+      letter-spacing: .02rem;
+      background-color: #fff;
+      color: #000;
+      border: 5px solid #00aeef; }
+  .footer span {
+    font-size: 1.15rem; }
