--- a/main.scss
+++ b/main.scss
@@ -1,260 +1,232 @@
 @import "mixin";
-
 // variables
-
 $color-black: #000;
 $color-grey: #d7d7d9;
-
 /* universal selector to reset browsers default settings */
+
 *,
 *::after,
 *::before {
-	margin: 0;
-	padding: 0;
-	/* inherited the box-sizing property in the body selector to apply in the entire documen */
-	box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+    /* inherited the box-sizing property in the body selector to apply in the entire documen */
+    box-sizing: inherit;
 }
 
 html {
-	// this defines what 1rem is
-	font-size: 62.5%;
+    // this defines what 1rem is
+    font-size: 62.5%;
 }
 
 body {
-	/* let us customize the box size model with specific unit without the default values */
-	box-sizing: border-box;
+    /* let us customize the box size model with specific unit without the default values */
+    box-sizing: border-box;
 }
 
 .navbar {
-	display: flex;
+    display: flex;
     position: fixed;
-	font-family: "Roboto", sans-serif;
-	background-color: white;
-	box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .15);
-	height: 4.9rem;
+    font-family: "Roboto", sans-serif;
+    background-color: white;
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .15);
+    height: 4.9rem;
     justify-content: center;
-	width: 100%;
-	
-	&-left-container {
-		display: flex;
-		list-style: none;
-		margin-right: 48rem;
-		align-items: center;
-
-		@include respond(tab-land) {
-			margin-left: 8rem;
-		}
-		@include respond(tab-port) {
-			margin: 0 15rem;
-		}
-	
-	 
-	}
-	
-	&-right-container {
-		display: flex;
-		list-style: none;
-		align-items: center;
-		margin-right: 15rem;
-
-		@include respond(tab-land) {
-			margin-left: 0rem;
-		}
-		@include respond(tab-port) {
-			margin: 0 18rem;
-		}
-	 
-	}
-
-	& a {
-		text-decoration: none;
-	}
-
-	&-font-1 {
-		color: $color-black;
-		text-transform: uppercase;
-		font-size: 1.1rem;
+    width: 100%;
+    &-left-container {
+        display: flex;
+        list-style: none;
+        margin-right: 48rem;
+        align-items: center;
+        @include respond(tab-land) {
+            margin-left: 8rem;
+        }
+        @include respond(tab-port) {
+            margin: 0 15rem;
+        }
+    }
+    &-right-container {
+        display: flex;
+        list-style: none;
+        align-items: center;
+        margin-right: 15rem;
+        @include respond(tab-land) {
+            margin-left: 0rem;
+        }
+        @include respond(tab-port) {
+            margin: 0 18rem;
+        }
+    }
+    & a {
+        text-decoration: none;
+    }
+    &-font-1 {
+        color: $color-black;
+        text-transform: uppercase;
+        font-size: 1.1rem;
         font-weight: 500;
-        
         @include respond(tab-land) {
             display: none;
         }
-    
-	}
-	&-font-2 {
-		flex-shrink: 0;
-		color: $color-black;
-		font-family: Limerick, sans-serif;
-		font-size: 1rem;
-		font-weight: 400;
-		border-left: 1px solid $color-grey;
-		margin-right: 2rem;
-		padding-left: .7rem;
-		padding-right: 1rem;
-
-		@include respond(tab-land) {
-			padding-left: .5rem;
-			padding-right: 0rem;
-			margin-right: 1rem;
-		}
-		@include respond(tab-port) {
-			display: none;
-		}
-	}
-	&-font-3 {
-		color: #ee0077;
-		font-family: Poppins, Helvetica, sans-serif;
-		text-transform: uppercase;
-		font-weight: 900;
-		font-size: .9rem;
-		line-height: 2.4rem;
-
-		@include respond(tab-port) {
-			font-size: 1.2rem;
-		}
-	}
-
-	&-hamburger-logo {
-		height: 1.5rem;
-		padding: 0;
-		margin: .3rem 0;
-	}
-	&-hamburger-logo-link {
-		padding-right: .8rem;
-		margin-left: .5rem;
-		@include respond(tab-land) {
-			margin: 0 0 0 4rem;
-		}
-	}
-	&-brand-logo-link {
-		padding: 0;
-		margin: 1rem 1.7rem;
-
-		@include respond(tab-land) {
-			margin: 0 0 0 .5rem;
-		}
-	}
-	&-brand-logo-img {
-		padding: 0;
-		height: 3rem;
-	}
-	&__search-icon {
-		height: 1.2rem;
-		margin-right: 2.5rem;
-		@include respond(tab-port) {
-			display: none;
-		}
-
-	
-	}
-	&__vertical-line {
-		border-left: 1px solid $color-grey;
-		height: 4.8rem;
-		padding-left: 1rem;
-		@include respond(tab-land) {
-			padding-left: .5rem;
-			height: 2rem;
-		}
-		@include respond(tab-port) {
-			display: none;
-		}
-	}
-	.glyphicon {
-		font-size: .7rem;
-		margin-left: 1rem;
-		color: rgba(0, 0, 0, .65);
-		
-		
-	}
+    }
+    &-font-2 {
+        flex-shrink: 0;
+        color: $color-black;
+        font-family: Limerick, sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        border-left: 1px solid $color-grey;
+        margin-right: 2rem;
+        padding-left: .7rem;
+        padding-right: 1rem;
+        @include respond(tab-land) {
+            padding-left: .5rem;
+            padding-right: 0rem;
+            margin-right: 1rem;
+        }
+        @include respond(tab-port) {
+            display: none;
+        }
+    }
+    &-font-3 {
+        color: #ee0077;
+        font-family: Poppins, Helvetica, sans-serif;
+        text-transform: uppercase;
+        font-weight: 900;
+        font-size: .9rem;
+        line-height: 2.4rem;
+        @include respond(tab-port) {
+            font-size: 1.2rem;
+        }
+    }
+    &-hamburger-logo {
+        height: 1.5rem;
+        padding: 0;
+        margin: .3rem 0;
+    }
+    &-hamburger-logo-link {
+        padding-right: .8rem;
+        margin-left: .5rem;
+        @include respond(tab-land) {
+            margin: 0 0 0 4rem;
+        }
+    }
+    &-brand-logo-link {
+        padding: 0;
+        margin: 1rem 1.7rem;
+        @include respond(tab-land) {
+            margin: 0 0 0 .5rem;
+        }
+    }
+    &-brand-logo-img {
+        padding: 0;
+        height: 3rem;
+    }
+    &__search-icon {
+        height: 1.2rem;
+        margin-right: 2.5rem;
+        @include respond(tab-port) {
+            display: none;
+        }
+    }
+    &__vertical-line {
+        border-left: 1px solid $color-grey;
+        height: 4.8rem;
+        padding-left: 1rem;
+        @include respond(tab-land) {
+            padding-left: .5rem;
+            height: 2rem;
+        }
+        @include respond(tab-port) {
+            display: none;
+        }
+    }
+    .glyphicon {
+        font-size: .7rem;
+        margin-left: 1rem;
+        color: rgba(0, 0, 0, .65);
+    }
 }
 
 .headline {
-
     &-container {
         margin-top: 6.8rem;
     }
-	&-top-links {
-		display: flex;
-		font-family: Lora, serif;
-		font-size: 1rem;
-		font-weight: 600;
-		justify-content: center;
-		text-transform: uppercase;
-		color: #239ad2;
-		margin: .5rem 0;
-		li:first-child {
-			margin: 0 2rem;
-			list-style: none;
-		}
-	}
-
-	&-home-link,
-	&-parents-link {
-		color: black;
-		&:hover {
-			text-decoration: none;
-			color: purple;
-		}
-	}
-
-	&__heading {
-		font-family: Basel, serif;
-		font-weight: 100;
-		line-height: 4.5rem;
-		font-size: 4rem;
-		margin: .67rem 0;
-		text-align: center;
-		width: 100%;
-
-		@include respond(phone) {
-			font-size: 2.4rem;   
-			line-height: 2.7rem;
-		}
-
-	}
-	&__social-media {
-		display: flex;
+    &-top-links {
+        display: flex;
+        font-family: Lora, serif;
+        font-size: 1rem;
+        font-weight: 600;
+        justify-content: center;
+        text-transform: uppercase;
+        color: #239ad2;
+        margin: .5rem 0;
+        li:first-child {
+            margin: 0 2rem;
+            list-style: none;
+        }
+    }
+    &-home-link,
+    &-parents-link {
+        color: black;
+        &:hover {
+            text-decoration: none;
+            color: purple;
+        }
+    }
+    &__heading {
+        font-family: Basel, serif;
+        font-weight: 100;
+        line-height: 4.5rem;
+        font-size: 4rem;
+        margin: .67rem 0;
+        text-align: center;
+        width: 100%;
+        @include respond(phone) {
+            font-size: 2.4rem;
+            line-height: 2.7rem;
+        }
+    }
+    &__social-media {
+        display: flex;
         justify-content: center;
         margin: 1rem 0;
-	}
-	&__social-media--icons {
-		height: 2.6rem;
-	}
-
-	&__social-media-links {
-		width: 3.1rem;
-	}
+    }
+    &__social-media--icons {
+        height: 2.6rem;
+    }
+    &__social-media-links {
+        width: 3.1rem;
+    }
 }
 
 .container {
-	width: 35%;
+    width: 35%;
     margin: 0 auto;
-
+    @include respond(big-desktop) {
+        width: 70%;
+    }
     @include respond(tab-land) {
-		width: 90%;    }
-		
-		@include respond(big-desktop) {
-			width: 90%;    }
+        width: 80%;
+    }
 }
 
 p {
-	font-family: Lora, serif;
-	font-weight: 100;
-	font-size: 1.6rem;
-	line-height: 2.1rem;
-	margin-top: 2.8rem;
-	margin-bottom: 2.8rem;
-	
+    font-family: Lora, serif;
+    font-weight: 100;
+    font-size: 1.7rem;
+    line-height: 2.1rem;
+    margin-top: 2.8rem;
+    margin-bottom: 2.8rem;
     @include respond(tab-land) {
-        font-size: 2rem;   
+        font-size: 1.8rem;
         line-height: 2.7rem;
     }
     @include respond(tab-port) {
-        font-size: 2.5rem;   
+        font-size: 2.5rem;
         line-height: 3.2rem;
-	}
-	@include respond(phone) {
-        font-size: 1.7rem;   
+    }
+    @include respond(phone) {
+        font-size: 1.5rem;
         line-height: 2.3rem;
     }
 }
@@ -268,8 +240,98 @@ p {
     margin: .2rem 1rem;
     padding: 0;
     color: #A3A5A9;
-
     &--author {
         margin-left: 1.5rem;
     }
+}
+
+.footer {
+	font-family: Limerick, sans-serif;
+	font-size: 1rem;
+    background-color: #FAF7FA;
+	margin-bottom: 10rem;
+	height: 45rem;
+	border-top: 1px solid $color-grey;
+	border-bottom: 1px solid $color-grey;
+
+	& h2 {
+		font-size: 1.8rem;
+		font-weight: 500;
+	}
+
+    &-logo {
+        padding: 4rem 0;
+    }
+    &-logo-img {
+        display: block;
+		margin: 0 auto;
+        height: 5rem;
+    }
+    &-inner-container {
+        display: flex;
+        justify-content: center;
+	}
+
+	//left container
+    &-inner-container-left {
+		text-align: center;
+		padding-right: 5rem;
+    }
+    &-inner-container--ad {
+		height: 20rem; // padding: 2rem 2rem;
+		margin-top: 2rem;
+	} 
+	// middle container
+    &-inner-container-middle {
+		text-align: center;
+		width: 25%;
+		
+		border-right: 1px solid $color-grey;
+		border-left: 1px solid $color-grey;
+
+		
+		&--links{
+			font-weight: 500;
+			margin-top: 1rem;
+			list-style: none;
+			display: inline-block;
+			& li{
+				padding: 1rem 0;
+			}
+		}
+	}
+    //right container
+    &-inner-container-right {
+		width: 20%;
+		text-align: center;
+
+		&--links {
+			list-style: none;
+			& li {
+				font-size: 1.1rem;
+				padding: 1.5rem 0 0 0;
+
+			}
+
+		}
+        &--media {
+			width: 75%;
+			margin-bottom: 4rem;
+		}
+		& button {
+			display: block;
+			margin: 1rem auto;
+			text-transform: uppercase;
+			padding: 1.2rem 4.2rem;
+			font-size: 1.2rem;
+			font-weight: 900;
+			letter-spacing: .02rem;
+			background-color: #fff;
+			color: #000;
+			border: 5px solid #00aeef;
+		}
+	}
+	& span {
+		font-size: 1.15rem;
+	}
 }
