--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,9 @@ body {
     @media (max-width: 51em) {
       .navbar-left-container {
         margin: 0 15rem; } }
+    @media (max-width: 37.5em) {
+      .navbar-left-container {
+        margin-right: 35rem; } }
   .navbar-right-container {
     display: flex;
     list-style: none;
@@ -61,6 +64,9 @@ body {
     @media (max-width: 51em) {
       .navbar-right-container {
         margin: 0 18rem; } }
+    @media (max-width: 37.5em) {
+      .navbar-right-container {
+        display: none; } }
   .navbar a {
     text-decoration: none; }
   .navbar-font-1 {
@@ -191,10 +197,16 @@ body {
   margin: 0 auto; }
   @media (max-width: 112.5em) {
     .container {
-      width: 70%; } }
+      width: 45%; } }
   @media (max-width: 75em) {
     .container {
-      width: 80%; } }
+      width: 70%; } }
+  @media (max-width: 51em) {
+    .container {
+      width: 65%; } }
+  @media (max-width: 37.5em) {
+    .container {
+      width: 75%; } }
 
 p {
   font-family: Lora, serif;
@@ -235,6 +247,9 @@ p {
   height: 45rem;
   border-top: 1px solid #d7d7d9;
   border-bottom: 1px solid #d7d7d9; }
+  @media (max-width: 37.5em) {
+    .footer {
+      height: 90rem; } }
   .footer h2 {
     font-size: 1.8rem;
     font-weight: 500; }
@@ -247,17 +262,38 @@ p {
   .footer-inner-container {
     display: flex;
     justify-content: center; }
+    @media (max-width: 37.5em) {
+      .footer-inner-container {
+        flex-direction: column;
+        align-items: center; } }
   .footer-inner-container-left {
     text-align: center;
     padding-right: 5rem; }
+    @media (max-width: 37.5em) {
+      .footer-inner-container-left {
+        align-items: center;
+        width: 100%; } }
   .footer-inner-container--ad {
     height: 20rem;
     margin-top: 2rem; }
+    @media (max-width: 37.5em) {
+      .footer-inner-container--ad {
+        margin-left: 5rem; } }
   .footer-inner-container-middle {
     text-align: center;
     width: 25%;
     border-right: 1px solid #d7d7d9;
     border-left: 1px solid #d7d7d9; }
+    @media (max-width: 37.5em) {
+      .footer-inner-container-middle {
+        font-size: 1.1rem;
+        border-top: 1px solid #d7d7d9;
+        border-bottom: 1px solid #d7d7d9;
+        border-right: none;
+        border-left: none;
+        margin: 2rem 0;
+        padding: 1.5rem 0;
+        width: 85%; } }
     .footer-inner-container-middle--links {
       font-weight: 500;
       margin-top: 1rem;
@@ -266,8 +302,20 @@ p {
       .footer-inner-container-middle--links li {
         padding: 1rem 0; }
   .footer-inner-container-right {
-    width: 20%;
+    width: 100%;
     text-align: center; }
+    @media (max-width: 112.5em) {
+      .footer-inner-container-right {
+        width: 20%; } }
+    @media (max-width: 75em) {
+      .footer-inner-container-right {
+        width: 25%; } }
+    @media (max-width: 51em) {
+      .footer-inner-container-right {
+        width: 75%; } }
+    @media (max-width: 37.5em) {
+      .footer-inner-container-right {
+        width: 17rem; } }
     .footer-inner-container-right--links {
       list-style: none; }
       .footer-inner-container-right--links li {
@@ -276,6 +324,18 @@ p {
     .footer-inner-container-right--media {
       width: 75%;
       margin-bottom: 4rem; }
+      @media (max-width: 112.5em) {
+        .footer-inner-container-right--media {
+          width: 65%; } }
+      @media (max-width: 75em) {
+        .footer-inner-container-right--media {
+          width: 70%; } }
+      @media (max-width: 51em) {
+        .footer-inner-container-right--media {
+          width: 75%; } }
+      @media (max-width: 37.5em) {
+        .footer-inner-container-right--media {
+          width: 17rem; } }
     .footer-inner-container-right button {
       display: block;
       margin: 1rem auto;
