--- a/main.scss
+++ b/main.scss
@@ -31,7 +31,8 @@ body {
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .15);
     height: 4.9rem;
     justify-content: center;
-    width: 100%;
+	width: 100%;
+	 // nav left container
     &-left-container {
         display: flex;
         list-style: none;
@@ -43,7 +44,10 @@ body {
         @include respond(tab-port) {
             margin: 0 15rem;
         }
-    }
+        @include respond(phone) {
+            margin-right: 35rem;
+        }
+    } //nav right container
     &-right-container {
         display: flex;
         list-style: none;
@@ -54,6 +58,9 @@ body {
         }
         @include respond(tab-port) {
             margin: 0 18rem;
+        }
+        @include respond(phone) {
+            display: none;
         }
     }
     & a {
@@ -201,12 +208,20 @@ body {
 
 .container {
     width: 35%;
-    margin: 0 auto;
+	margin: 0 auto;
     @include respond(big-desktop) {
-        width: 70%;
+        width: 45%;
     }
     @include respond(tab-land) {
-        width: 80%;
+        width: 70%;
+	}
+	@include respond(tab-port) {
+		width: 65%;
+
+    }
+    @include respond(phone) {
+        width: 75%;
+
     }
 }
 
@@ -232,7 +247,7 @@ p {
 }
 
 .img-responsive {
-    width: 100%;
+	width: 100%;
 }
 
 .img-desc {
@@ -246,92 +261,142 @@ p {
 }
 
 .footer {
-	font-family: Limerick, sans-serif;
-	font-size: 1rem;
+    font-family: Limerick, sans-serif;
+    font-size: 1rem;
     background-color: #FAF7FA;
-	margin-bottom: 10rem;
-	height: 45rem;
-	border-top: 1px solid $color-grey;
+    margin-bottom: 10rem;
+    height: 45rem;
+    border-top: 1px solid $color-grey;
 	border-bottom: 1px solid $color-grey;
-
-	& h2 {
-		font-size: 1.8rem;
-		font-weight: 500;
+	
+    @include respond(phone) {
+        height: 90rem;
 	}
-
+	
+    & h2 {
+        font-size: 1.8rem;
+		font-weight: 500;
+    }
     &-logo {
         padding: 4rem 0;
     }
     &-logo-img {
         display: block;
-		margin: 0 auto;
+        margin: 0 auto;
         height: 5rem;
-    }
+	}
+	
+	// inner container
     &-inner-container {
         display: flex;
-        justify-content: center;
-	}
-
+		justify-content: center;
+		
+        @include respond(phone) {
+            flex-direction: column;
+            align-items: center;
+        }
+	} 
 	//left container
     &-inner-container-left {
-		text-align: center;
+        text-align: center;
 		padding-right: 5rem;
+		
+        @include respond(phone) {
+            align-items: center;
+            width: 100%;
+        }
     }
     &-inner-container--ad {
-		height: 20rem; // padding: 2rem 2rem;
+        height: 20rem; // padding: 2rem 2rem;
 		margin-top: 2rem;
+		
+        @include respond(phone) {
+            margin-left: 5rem;
+        }
 	} 
 	// middle container
     &-inner-container-middle {
-		text-align: center;
-		width: 25%;
-		
-		border-right: 1px solid $color-grey;
+        text-align: center;
+        width: 25%;
+        border-right: 1px solid $color-grey;
 		border-left: 1px solid $color-grey;
-
 		
-		&--links{
-			font-weight: 500;
-			margin-top: 1rem;
-			list-style: none;
-			display: inline-block;
-			& li{
-				padding: 1rem 0;
-			}
-		}
+        @include respond(phone) {
+            font-size: 1.1rem;
+            border-top: 1px solid $color-grey;
+            border-bottom: 1px solid $color-grey;
+            border-right: none;
+            border-left: none;
+            margin: 2rem 0;
+            padding: 1.5rem 0;
+            width: 85%;
+        }
+        &--links {
+            font-weight: 500;
+            margin-top: 1rem;
+            list-style: none;
+            display: inline-block;
+            & li {
+                padding: 1rem 0;
+            }
+        }
 	}
-    //right container
+	 //right container
     &-inner-container-right {
-		width: 20%;
+        width: 100%;
 		text-align: center;
-
-		&--links {
-			list-style: none;
-			& li {
-				font-size: 1.1rem;
-				padding: 1.5rem 0 0 0;
-
-			}
-
+		@include respond(big-desktop){
+			width: 20%;
 		}
-        &--media {
+		@include respond(tab-land) {
+			width: 25%;
+		}
+		@include respond(tab-port) {
 			width: 75%;
+		}
+		@include respond(phone) {
+			width: 17rem;
+		}
+		
+        &--links {
+            list-style: none;
+            & li {
+                font-size: 1.1rem;
+                padding: 1.5rem 0 0 0;
+            }
+		}
+
+
+        &--media {
+            width: 75%;
 			margin-bottom: 4rem;
-		}
-		& button {
-			display: block;
-			margin: 1rem auto;
-			text-transform: uppercase;
-			padding: 1.2rem 4.2rem;
-			font-size: 1.2rem;
-			font-weight: 900;
-			letter-spacing: .02rem;
-			background-color: #fff;
-			color: #000;
-			border: 5px solid #00aeef;
-		}
-	}
-	& span {
-		font-size: 1.15rem;
-	}
+			@include respond(big-desktop){
+				width: 65%;
+			}
+			@include respond(tab-land) {
+				width: 70%;
+			}
+			@include respond(tab-port) {
+				width: 75%;
+			}
+			@include respond(phone) {
+				width: 17rem;
+			}
+        }
+        & button {
+            display: block;
+            margin: 1rem auto;
+            text-transform: uppercase;
+            padding: 1.2rem 4.2rem;
+            font-size: 1.2rem;
+            font-weight: 900;
+            letter-spacing: .02rem;
+            background-color: #fff;
+            color: #000;
+            border: 5px solid #00aeef;
+        }
+    }
+    & span {
+        font-size: 1.15rem;
+    }
 }
