--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,3 @@
-/*
-0 - 600px: Phone
-600 - 900px: Tablet portrait
-900 - 1200px: tablet landscape
-[1200 - 1800] is where our normal styles applies
-1800px and plus: Big desktop;
-*/
-/*
-$breakpoint argument choices:
-- phone
-- tab-port // tablet portrait
-- tab-land // tablet landscape
-- big-desktop
-
-ORDER: Base + typography > general layout + grid > page layout > components
-*/
 /* universal selector to reset browsers default settings */
 *,
 *::after,
@@ -27,125 +11,72 @@ body {
   /* let us customize the box size model with specific unit without the default values */
   box-sizing: border-box; }
 
+/*
+0 - 600px: Phone
+600 - 1024px: Tablet portrait
+1024 - 1200px: tablet landscape
+*/
 .navbar {
   display: flex;
+  justify-content: space-around;
   position: fixed;
+  height: 60px;
   top: 0;
-  font-family: "Roboto", sans-serif;
-  background-color: white;
+  left: 0;
+  right: 0;
+  top: 0;
+  background: #fff;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.15);
-  justify-content: center;
-  width: 100%; }
-  .navbar-left-container {
+  font-family: "Roboto", sans-serif; }
+  .navbar__left {
     display: flex;
     list-style: none;
-    margin-right: 400px;
     align-items: center; }
-    @media (max-width: 1200px) {
-      .navbar-left-container {
-        margin-left: 8rem; } }
-    @media (max-width: 1024px) {
-      .navbar-left-container {
-        margin: .4rem 10.5rem; } }
-    @media (max-width: 600px) {
-      .navbar-left-container {
-        margin-right: 24rem; } }
-  .navbar-right-container {
+    .navbar__left .navbar__hamburger-menu {
+      width: 25px; }
+    .navbar__left-list {
+      margin-bottom: 7px;
+      padding: 10px;
+      margin-right: 15px; }
+    .navbar__left-text {
+      color: rgba(0, 0, 0, 0.95);
+      text-transform: uppercase;
+      text-decoration: none;
+      font-size: 14px;
+      line-height: 20px;
+      font-weight: 400; }
+    .navbar__left .navbar__site-logo-img {
+      margin-top: 5px;
+      height: 35px; }
+  .navbar__right {
     display: flex;
     list-style: none;
-    align-items: center;
-    margin-left: 12rem; }
-    @media (max-width: 1200px) {
-      .navbar-right-container {
-        margin-left: 0rem; } }
-    @media (max-width: 1024px) {
-      .navbar-right-container {
-        margin: 0 14.5rem; } }
-    @media (max-width: 600px) {
-      .navbar-right-container {
-        display: none; } }
-  .navbar a {
-    text-decoration: none; }
-  .navbar-font-1 {
-    color: #000;
-    text-transform: uppercase;
-    font-size: 14px;
-    line-height: 20px;
-    font-weight: 400; }
-    @media (max-width: 1200px) {
-      .navbar-font-1 {
-        display: none; } }
-  .navbar-font-2 {
-    flex-shrink: 0;
-    color: #000;
-    font-family: "Limerick", sans-serif;
-    font-size: 13px;
-    line-height: 20px;
-    font-weight: 400;
-    border-left: 1px solid #d7d7d9;
-    padding-left: .7rem;
-    padding-right: 1rem; }
-    @media (max-width: 1200px) {
-      .navbar-font-2 {
-        padding-left: .5rem;
-        padding-right: 0rem;
-        margin-right: 1rem; } }
-    @media (max-width: 1024px) {
-      .navbar-font-2 {
-        display: none; } }
-  .navbar-font-3 {
-    color: #ee0077;
-    font-family: Poppins, Helvetica, sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 12px; }
-    @media (max-width: 1024px) {
-      .navbar-font-3 {
-        font-size: 12px; } }
-  .navbar-hamburger-logo {
+    align-items: center; }
+    .navbar__right-text {
+      text-decoration: none;
+      font-family: sans-serif;
+      font-size: 13px;
+      line-height: 20px;
+      color: rgba(0, 0, 0, 0.95);
+      border-left: 1px solid #d7d7d9;
+      padding-left: .7rem;
+      padding-right: 1rem; }
+    .navbar__right-vertical-line {
+      border-left: 1px solid #d7d7d9;
+      height: 59px;
+      padding-left: 1rem; }
+    .navbar__right-text-active {
+      text-decoration: none;
+      color: #ee0077;
+      font-family: Helvetica, sans-serif;
+      text-transform: uppercase;
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 12px; }
+  .navbar .navbar__search-icon {
     height: 17px;
-    padding: 0; }
-  .navbar-hamburger-logo-link {
-    padding-right: 9px;
-    margin-left: 2rem; }
-    @media (max-width: 1200px) {
-      .navbar-hamburger-logo-link {
-        margin: 0 0 0 4rem; } }
-  .navbar-brand-logo-link {
-    padding: 0;
-    margin: 0 1rem;
-    margin-top: 6px; }
-    @media (max-width: 1200px) {
-      .navbar-brand-logo-link {
-        margin-top: .3rem; } }
-    @media (max-width: 600px) {
-      .navbar-brand-logo-link {
-        margin-left: 10px; } }
-  .navbar-brand-logo-img {
-    padding: 0;
-    height: 35px; }
-  .navbar__search-icon {
-    height: 16px;
-    margin-right: 1.6rem; }
-    @media (max-width: 1024px) {
-      .navbar__search-icon {
-        display: none; } }
-  .navbar__vertical-line {
-    border-left: 1px solid #d7d7d9;
-    height: 59px;
-    padding-left: 1rem; }
-    @media (max-width: 1200px) {
-      .navbar__vertical-line {
-        padding-left: .5rem;
-        height: 2rem; } }
-    @media (max-width: 1024px) {
-      .navbar__vertical-line {
-        display: none; } }
-  .navbar .glyphicon {
-    font-size: .7rem;
-    margin-left: 1rem;
-    color: rgba(0, 0, 0, 0.65); }
+    margin-right: 1.6rem;
+    margin-top: 8px; }
 
 .headline-container {
   margin-top: 4rem; }
@@ -199,6 +130,19 @@ body {
 .headline__social-media-links {
   width: 2.1rem; }
 
+.container {
+  width: 60%;
+  margin: 0 auto; }
+  @media (max-width: 1200px) {
+    .container {
+      width: 80%; } }
+  @media (max-width: 1024px) {
+    .container {
+      width: 90%; } }
+  @media (max-width: 600px) {
+    .container {
+      width: 95%; } }
+
 .main-content {
   margin: 0 auto;
   max-width: 650px; }
@@ -214,7 +158,7 @@ body {
         font-size: 18px;
         line-height: 28px; } }
   .main-content p {
-    font-family: Lora, serif;
+    font-family: "Lora", serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 28px;
@@ -232,22 +176,6 @@ body {
       .main-content p {
         font-size: 16px;
         line-height: 28px; } }
-
-.container {
-  width: 60%;
-  margin: 0 auto; }
-  @media (min-width: 1800px) {
-    .container {
-      width: 45%; } }
-  @media (max-width: 1200px) {
-    .container {
-      width: 80%; } }
-  @media (max-width: 1024px) {
-    .container {
-      width: 90%; } }
-  @media (max-width: 600px) {
-    .container {
-      width: 95%; } }
 
 .figure-container {
   max-width: 650px;
